# metrics-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  a.py  action.yml  art.py  docker-compose.yml  example-action-usage.yml  github_stats.py  languages_svg.py  lastfm.py  mock_svg_generator.py  pyproject.toml  run.sh  start-cron.sh  svg_header.py  today.py
.github/: FUNDING.yml
tests/: test_github_stats.py  test_github_stats_alignment.py  test_github_stats_layout.py  test_github_stats_loc_optimization.py  test_svg_headers.py
